# lab_cobot_ws

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  G4修改日志.md  G5机械臂动态避障移植方案.md  G5验收报告.md  README.md  THIRD_PARTY_LICENSES.md  grasp_focus_run_2026-07-20.md  grasp_task_changes_2026-07-20.md  simulation_rerun_2026-07-19.md  simulation_rerun_2026-07-19_200755.md  simulation_run_2026-07-19_192922.md
benchmarks/: README.md  e2e_repeat_stats.sh  (+10 more)
src/image_pkg/: CMakeLists.txt  README.md  lighting_test_report.md  package.xml  setup.py
src/image_pkg/config/: camera_visualization.rviz  pose_estimation.yaml
src/image_pkg/image_pkg/: lighting_benchmark_node.py  pcl_node.py  rgbd_pointcloud_node.py  yolo_pointcloud_pose_node.py  yolo_world_detector.py  yolo_world_node.py
src/image_pkg/launch/: pose_estimation.launch.py
src/image_pkg/lighting_benchmark_results/: lighting_benchmark_report.md
src/image_pkg/lighting_benchmark_results/a_station_normal_visible/: summary.json
src/image_pkg/lighting_benchmark_results/a_station_probe/: summary.json
src/image_pkg/lighting_benchmark_results/normal_visible/: summary.json
src/image_pkg/test/: test_pcl_node.py
src/lab_cobot_bringup/: CMakeLists.txt  package.xml
src/lab_cobot_bringup/lab_cobot_bringup/: grasp_validator.py  gripper_attach_bridge.py  mecanum_wheel_visualizer.py  mission_node.py  passive_mecanum_joint_states.py  rover_twist_relay.py  task_planner.py  task_state_machine.py  voice_node.py  voice_transcriber.py  wheel_joint_state_publisher.py
src/lab_cobot_bringup/launch/: lab_cobot.launch.py
src/lab_cobot_bringup/scripts/: manual_llm_plan_check.py
src/lab_cobot_bringup/test/: test_grasp_validator.py  test_gripper_attach_bridge.py  test_honest_e2e_diagnostics.py  test_honest_e2e_dl_arguments.py  test_honest_e2e_launch.py  test_lab_cobot_launch.py  test_mecanum_wheel_visualizer.py  test_mission_docking.py  test_mission_navigation_handoff.py  test_mission_place_pose.py  test_mission_planning.py  test_mission_retreat.py  test_passive_mecanum_joint_states.py  test_rover_twist_relay.py  test_task_planner.py  test_task_state_machine.py  test_voice_node.py  test_voice_transcriber.py
src/lab_cobot_description/: CMakeLists.txt  package.xml
src/lab_cobot_description/config/: initial_positions.yaml  lab_cobot_controllers.yaml  view_robot.rviz
src/lab_cobot_description/launch/: view_robot.launch.py
src/lab_cobot_description/meshes/mecanum3/: arms.stl  base_link.stl  mecanum_wheel.stl  mecanum_wheel_rev.stl
src/lab_cobot_description/srdf/: lab_cobot.srdf
src/lab_cobot_description/test/: test_mecanum3_chassis_contracts.py  test_mecanum_chassis_contracts.py  test_stage5_description_contracts.py
src/lab_cobot_description/urdf/: lab_cobot.urdf.xacro
src/lab_cobot_description/urdf/inc/: common.xacro  mecanum3_base.xacro  mecanum_base.xacro  parallel_gripper.xacro  pillar.xacro  sensors.xacro  vacuum_gripper.xacro  wrist_camera.xacro
src/lab_cobot_gazebo/: CMakeLists.txt  package.xml
src/lab_cobot_gazebo/include/lab_cobot_gazebo/: attached_object_collision.hpp  canonical_attach.hpp  finger_collision_config.hpp  finger_contact_gate.hpp  grasp_envelope.hpp  mecanum_kinematics.hpp  planar_safety.hpp  pose_differentiator.hpp  post_attach_velocity_clamp.hpp  runtime_motion.hpp
src/lab_cobot_gazebo/launch/: world.launch.py
src/lab_cobot_gazebo/scripts/: controller_bootstrap.py
src/lab_cobot_gazebo/src/: gazebo_odom_bridge.cpp  lab_cobot_grasp_fix.cpp  lab_cobot_mecanum_drive.cpp  lab_cobot_planar_drive.cpp  mecanum_gazebo_kinematic_drive.cpp
src/lab_cobot_gazebo/test/: test_aruco_sample_model.py  test_attached_object_collision.cpp  test_dl_perception_models.py  test_finger_contact_gate.cpp  test_grasp_envelope.cpp  test_grasp_fix_plugin.py  test_mecanum_drive_plugin.py  test_mecanum_kinematics.cpp  test_mecanum_runtime_contract.py  test_planar_safety.cpp  test_planar_safety_runtime.py  test_pose_differentiator.cpp  test_post_attach_velocity_clamp.cpp  test_runtime_motion.cpp  test_world_launch.py
src/lab_cobot_gazebo/worlds/: grasp_place.world  lab.world  lab_actor.world  lab_dark.world  lab_dark_actor.world  lab_reflective.world  lab_reflective_actor.world
src/lab_cobot_manipulation/: package.xml  setup.cfg  setup.py
src/lab_cobot_manipulation/lab_cobot_manipulation/: contact_force_recorder.py  dynamic_arm_obstacle_node.py  gripper_driver.py  joint_state_qos_relay.py  pick_place_node.py  refine_select.py  scene_obstacles.py
src/lab_cobot_manipulation/test/: test_contact_force_recorder.py  test_dynamic_arm_obstacle_node.py  test_flake8.py  test_gripper_driver.py  test_pep257.py  test_pick_place_sequence.py  test_refine_select.py  test_scene_obstacles.py
src/lab_cobot_moveit/: CMakeLists.txt  package.xml
src/lab_cobot_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/lab_cobot_moveit/lab_cobot_moveit/: table_scene_initializer.py
src/lab_cobot_moveit/launch/: move_group.launch.py
src/lab_cobot_moveit/test/: test_moveit_config.py  test_table_scene_initializer.py
src/lab_cobot_navigation/: CMakeLists.txt  package.xml
src/lab_cobot_navigation/config/: ekf.yaml  mapping.rviz  mapping.yaml  nav2_params.yaml
src/lab_cobot_navigation/lab_cobot_navigation/: waypoints.py
src/lab_cobot_navigation/launch/: mapping.launch.py  navigation.launch.py
src/lab_cobot_navigation/maps/: check_map.py  denoise_map.py  map.pgm  map.yaml  map_noisy_backup.pgm  map_original_backup.pgm  map_provenance.yaml
src/lab_cobot_navigation/scripts/: generate_map.py
src/lab_cobot_navigation/test/: test_denoise_map.py  test_nav2_params.py  test_navigation_launch.py  test_waypoints.py
src/lab_cobot_perception/: package.xml  setup.cfg  setup.py
src/lab_cobot_perception/lab_cobot_perception/: aruco_detector.py  object_detector.py  pointcloud_ops.py  pose_math.py  quat_math.py  yolo_backend.py
src/lab_cobot_perception/test/: test_aruco_detector.py  test_flake8.py  test_object_detector.py  test_pep257.py  test_pointcloud_ops.py  test_pose_math.py  test_quat_math.py  test_yolo_backend.py
(+169 files in other folders)
