<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab_cobot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2188630464@qq.com">THW</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>lab_cobot_navigation</exec_depend>
  <exec_depend>lab_cobot_manipulation</exec_depend>
  <exec_depend>lab_cobot_perception</exec_depend>
  <exec_depend>lab_cobot_moveit</exec_depend>
  <exec_depend>lab_cobot_gazebo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
