<?xml version="1.0"?>
<package format="3">
  <name>lab_cobot_manipulation</name>
  <version>0.1.0</version>
  <description>机械臂抓放执行(pymoveit2 运动规划 + 平行夹爪后端)</description>
  <maintainer email="2188630464@qq.com">THW</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>pymoveit2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
