<?xml version="1.0"?>
<package format="3">
  <name>lab_cobot_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2188630464@qq.com">THW</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
